--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,8 +40,7 @@
       ],
       "extends": [
         "plugin:@angular-eslint/template/recommended",
-        "plugin:@angular-eslint/template/accessibility",
-        "prettier"
+        "plugin:@angular-eslint/template/accessibility"
       ],
       "rules": {}
     }
