--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,13 @@
         "plugin:@typescript-eslint/recommended",
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates",
-        "prettier"
+        "airbnb-base",
+        "airbnb-typescript/base",
+        "plugin:prettier/recommended"
       ],
+      "parserOptions": {
+        "project": "./tsconfig.json"
+      },
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
@@ -31,7 +36,8 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "import/prefer-default-export": "off"
       }
     },
     {
