--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --watch=false --browsers ChromeHeadless",
-    "lint": "npx eslint \"src/**/*.{js,jsx,ts,tsx,html}\" --fix",
+    "pre-commit": "concurrently \"npm run format\" \"npm run lint\"",
+    "lint": "npx eslint \"src/**/*.{js,jsx,ts,tsx,html}\"",
     "format": "npx prettier \"src/**/*.{js,jsx,ts,tsx,html,css,scss}\" --write",
     "prepare": "husky install"
   },
@@ -39,11 +40,13 @@
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "6.11.0",
     "@typescript-eslint/parser": "6.11.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -51,7 +54,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.1.0",
-    "typescript": "~5.2.2",
-    "husky": "^8.0.0"
+    "typescript": "~5.2.2"
   }
 }
